fixed whitespace on side

--- a/app/assets/stylesheets/francis.css.scss
+++ b/app/assets/stylesheets/francis.css.scss
@@ -5,6 +5,7 @@
 html,body {height:100%; width: 100%;
 margin: 0px;
 padding: 0;
+overflow-x: hidden;
 }
 .special,.special .jumbotron {
   height:100%;
